# pic-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  prune-deleted.sh  todo.txt
gittools/: mk-branch.sh  prune-deleted.sh
src/: CMakeLists.txt  constants.hpp  field.cpp  field.hpp  main.cpp  potential_solver.cpp  potential_solver.hpp  species.cpp  species.hpp  world.cpp  world.hpp
src/core/: CMakeLists.txt  constants.hpp
src/domain_objects/: CMakeLists.txt  field.cpp  field.hpp  species.cpp  species.hpp  world.cpp  world.hpp
src/output/: CMakeLists.txt  output.cpp  output.hpp
src/solvers/: CMakeLists.txt  potential_solver.cpp  potential_solver.hpp
